[package]
name = "water-sensor-firmware"
version = "0.2.0"
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]
description = "Firmware for the Credump water-sensor project"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "GPL-3.0"
repository = "https://github.com/coredump-ch/water-sensor-firmware-rs"

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
codegen-units = 1

[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
lpc11uxx-hal = { git = "https://github.com/lpc-rs/lpc11uxx-hal.git" }
embedded-hal = "0.2"
