[package]
name = "gfroerli-firmware"
version = "0.2.0"
authors = [
    "Raphael Nestler <raphael.nestler@gmail.com>",
    "Danilo Bargen <mail@dbrgn.ch>",
]
description = "Firmware for the Gfrör.li water temperature sensor"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "GPL-3.0"
repository = "https://github.com/gfroerli/firmware"
edition = "2018"

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
codegen-units = 1

[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
embedded-hal = { version = "0.2.2", features = ["unproven"] }
panic-semihosting = "0.5"
stm32l0xx-hal = { version = "0.1.0", features = ["rt", "stm32l0x1"] }
