[package]
name = "gfroerli-firmware"
version = "0.2.0"
authors = [
    "Raphael Nestler <raphael.nestler@gmail.com>",
    "Danilo Bargen <mail@dbrgn.ch>",
]
description = "Firmware for the Gfrör.li water temperature sensor"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "GPL-3.0"
repository = "https://github.com/gfroerli/firmware"
edition = "2018"

[profile.dev]
codegen-units = 1
opt-level = 2

[profile.release]
lto = true
debug = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2
overflow-checks = false

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"
embedded-hal = { version = "0.2.2", features = ["unproven"] }
one-wire-bus = "0.1.1"
stm32l0 = "0.10.0"
stm32l0xx-hal = { git = "ssh://git@github.com/stm32-rs/stm32l0xx-hal.git", branch = "master", features = ["rt", "mcu-STM32L071KBTx"] }
shtcx = { git = "https://github.com/dbrgn/shtcx-rs", branch = "master" }
bitfield = "0.13"

[target.'cfg(target_arch = "arm")'.dependencies]
panic-persist = { version = "0.2", features = ["utf8"] }

[features]
# Enable some more verbose logging and debug assertions
dev = []
