[package]
name = "config-flasher"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.2"
gfroerli-common = { path = "../common", features = ["serde_support"] }
probe-rs = { git = "https://github.com/probe-rs/probe-rs.git" }
toml = "0.5"
