[package]
name = "gfroerli-common"
version = "0.1.0"
authors = [
    "Raphael Nestler <raphael.nestler@gmail.com>",
    "Danilo Bargen <mail@dbrgn.ch>",
]
edition = "2018"

[features]
default = []
serde_support = ["hex", "serde", "serde_repr"]

[dependencies]
hex = { version = "0.4", features = ["serde"], optional = true }
serde = { version = "1", optional = true }
serde_repr = { version = "0.1", optional = true }
bitfield = "0.13"
bitvec = { version = "1.0",  default-features = false }
