[package]
name = "gfroerli-firmware"
version = "0.2.0"
authors = [
    "Raphael Nestler <raphael.nestler@gmail.com>",
    "Danilo Bargen <mail@dbrgn.ch>",
]
description = "Firmware for the Gfrör.li water temperature sensor"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "GPL-3.0"
repository = "https://github.com/gfroerli/firmware"
edition = "2021"

[dependencies]
gfroerli-common = { path = "../common" }

bitfield = "0.13"
cortex-m = "0.7" # Keep in sync with stm32l0xx-hal
cortex-m-rtic = "1.0.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] } # Keep in sync with stm32l0xx-hal
embedded-time = "0.12" # Keep in sync with stm32l0xx-hal
fugit = "0.3"
one-wire-bus = "0.1.1"
rn2xx3 = "0.2.1"
stm32l0xx-hal = { version = "0.8.0", features = ["rt", "mcu-STM32L071KBTx", "rtc"] }
shtcx = { git = "https://github.com/dbrgn/shtcx-rs", branch = "master" }

[dev-dependencies]
rstest = "0.11"

[target.'cfg(target_arch = "arm")'.dependencies]
panic-persist = { version = "0.3.0", features = ["utf8"] }

[features]
# Enable some more verbose logging and debug assertions
dev = []

[profile.dev]
codegen-units = 1
opt-level = 2

[profile.release]
lto = true
debug = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2
overflow-checks = false
